# va-bot

./: .env.template  .gitignore  .replit  Dockerfile  PHASE1_SECRETS_TEMPLATE.env  Phase1 Va Connectors And Runner.py  Procfile  activate_all.sh  alert_guard.py  alerts.py  app_lock.py  app_root_unused.py  approval_state.json  auto_invoice_bot.py  auto_pdf.py  check_connectors.py  config_email.py  connect_elina.py  connector.py  create_dummy_reports.py  credentials.json  daily_inputs.json  daily_report.py  dashboard_app.py  email_templates.py  firstlogin-template.js  generate_api_keys.py  generate_invoice.py  generate_pdf.py  glcoud.py  income_streams.py  invoice_template.html  invoices.csv  keep_alive.py  login_and_email.py  login_manager.py  logins.json  logins.py  main.py  main_elina.py  (+47 more)
Connectors/: meshy Youtube Connector.py
DailyReport/: DejaVuSans.pkl  app.py  app_runner.py  capture_meshytube.py  phase1.py  send_daily_report.py  send_report_now.sh
adapters/: cadcrowd.py  etsy.py  instagram.py  meshy.py  printify.py
connectors/: <platform>_connector.py  connector.py  phase1_connector.py  printify_pod_connector.py  youtube_auth.py
jravis/: ingest_docs.py  jarvis_brain.py  memory_store.py  vabot_executor_stub.py
logs/: phase1_log.csv  scheduler.out  support_log.csv
runner/: run_meshytube.sh  start_all.sh
scripts/: generate_reports.py  run_phase1.py
secret/: income_streams.json  phases.json
streams/: etsy.py  glcoud.py  gumroad.py  printify_etsy.py
templates/: index.html
tests/: dry_run_meshytube.py
vabot/: callback_server.py  daily_scheduler.py  (+12 more)
(+2 files in other folders)
