[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "fpdf>=1.7.2",
    "pdfkit>=1.0.0",
    "pytz>=2025.2",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "schedule>=1.2.2",
]
